[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Icon38.png" type="Texture" id=1]
[ext_resource path="res://assets/Icon37.png" type="Texture" id=2]
[ext_resource path="res://assets/Icon36.png" type="Texture" id=3]
[ext_resource path="res://assets/Icon33.png" type="Texture" id=4]
[ext_resource path="res://assets/Icon29.png" type="Texture" id=5]
[ext_resource path="res://assets/Icon35.png" type="Texture" id=6]
[ext_resource path="res://assets/background_menu.png" type="Texture" id=7]
[ext_resource path="res://assets/Icon28.png" type="Texture" id=8]
[ext_resource path="res://assets/Icon34.png" type="Texture" id=9]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://src/menu.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 38
outline_color = Color( 0.329412, 0.823529, 0.823529, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
render_mode blend_mix,unshaded;

uniform vec4 effect_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform int border : hint_range(1, 30);
uniform float border_filter : hint_range(0.01, 0.9);

vec2 get_direction(int k) {
	if(k == 1) return vec2(1.0, 0);
	else if(k ==2) return vec2(-1.0, 0);
	else if(k == 3) return vec2(0, 1.0);
	else return vec2(0, -1.0);
}

void fragment() {
	vec4 c = texture(TEXTURE, UV);
	if(c.a > border_filter) {
		COLOR = c;
	} else {
		int min_length = border + 1;
		for(int i = 1; i <= 4; i++) {
			for(int j = 1; j < min_length; j++) {
				vec4 c2 = texture(TEXTURE, UV + get_direction(i) * TEXTURE_PIXEL_SIZE * float(j));
				if(c2.a > 0.01) {
					min_length = j;
				}
			}
		}
		if (min_length > border) {
			discard;
		} else {
			COLOR = effect_color;
			COLOR.a = mix(1.0, 0.0, float(min_length - 1) / float(border));
		}
	}
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/effect_color = Color( 0.329412, 0.823529, 0.823529, 1 )
shader_param/border = 10
shader_param/border_filter = null

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.662
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 648.96
margin_bottom = 540.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.521569 )
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="Objective" type="Node2D" parent="."]

[node name="Panel" type="ColorRect" parent="Objective"]
modulate = Color( 1, 1, 1, 0.494118 )
margin_right = 1920.0
margin_bottom = 40.0
color = Color( 0.329412, 0.823529, 0.823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Objective"]
margin_right = 1900.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Objetivo atual"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node2D" parent="."]
position = Vector2( 950, 540 )

[node name="OptionName" type="Label" parent="Options"]
modulate = Color( 0.329412, 0.823529, 0.823529, 1 )
margin_left = -232.0
margin_top = -90.0
margin_right = 228.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 230, 30 )
custom_fonts/font = SubResource( 2 )
text = "Option Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option7" type="TextureRect" parent="Options" groups=[
"option",
]]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Config"
}

[node name="Option2" type="TextureRect" parent="Options" groups=[
"option",
]]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 9 )
__meta__ = {
"_editor_description_": "Items"
}

[node name="Option6" type="TextureRect" parent="Options" groups=[
"option",
]]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Magic Arts"
}

[node name="Option8" type="TextureRect" parent="Options" groups=[
"option",
]]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 8 )
__meta__ = {
"_editor_description_": "Exit"
}

[node name="Option4" type="TextureRect" parent="Options" groups=[
"option",
]]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Characters"
}

[node name="Option1" type="TextureRect" parent="Options" groups=[
"option",
]]
material = SubResource( 4 )
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Deathblows"
}

[node name="Option5" type="TextureRect" parent="Options" groups=[
"option",
]]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Objectives"
}

[node name="Option3" type="TextureRect" parent="Options" groups=[
"option",
]]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Data"
}
